fix vulnerability errors package.json

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "i": "^0.3.6",
     "nodeunit": "^0.11.3",
     "npm": "^6.10.1",
-    "vimdebug": "^1.0.0"
+    "vimdebug": "^1.0.0",
+    "diff": ">=3.5.0",
+    "deep-extend": ">=0.5.1"
   }
 }
